@@ -272,7 +272,7 @@
 			</div>
 
 
-			<div id="optionsDiv" style="display: none" class="help">
+			<div id="optionsDiv" style="display: none; height: 360px; margin-top:-180px" class="help">
 				<a href="#" onclick="$('#optionsDiv').hide();" style="position: absolute; top: 10px; right: 15px;">close</a>
 
 				Color scheme: <!-- <input id="schemeToggle" type="checkbox" onclick="gamePage.toggleScheme()"> Inverted <br><br><br> -->
@@ -304,11 +304,17 @@
 				<input id="hideSell" type="checkbox" onclick="gamePage.opts.hideSell = $('#hideSell')[0].checked;">
 					Hide 'sell' buttons
 				<br>
+                <br>
+
+                <a href="#" onclick="$('.optsExtra').show();">More...</a>
 				<!-- looks like a to niche option to occupy entire setting slot -->
-				<div style="display:none">
+				<div class="optsExtra" style="display:none">
 					<input id="noConfirm" type="checkbox" onclick="gamePage.opts.noConfirm = $('#noConfirm')[0].checked;">
 						Do not confrim when clearing all jobs
 					<br>
+                    <input id="noEnergyPenalty" type="checkbox" onclick="gamePage.opts.noEnergyPenalty = $('#noEnergyPenalty')[0].checked;">
+                        No energy penalty
+                    <br>
 				</div>
 
 				<br>
